--- a/김진우/index.html
+++ b/김진우/index.html
@@ -20,8 +20,7 @@
             <div class="about">
                 <p>
                     삶이란 누군가에게는 행복이며 누군가에게는 불행이고<br />
-                    누군가에게는 축복이리라 나에게 주어진 이 삶은 어떨지
-                    모르겠으나<br />
+                    누군가에게는 축복이리라 나에게 주어진 이 삶은 어떨지 모르겠으나<br />
                     후회없이 살아가는 것 그것이 내 목표이자 부모에 대한 孝이다.
                     <span>- 진우</span>
                     <em class="close"></em>
@@ -58,7 +57,7 @@
             <div class="footer__info">
                 <div class="menu">
                     <ul>
-                        <li><a href="#"></a></li>
+                        <li class="first"><a href="#">dd</a></li>
                         <li><a href="#"></a></li>
                         <li><a href="#"></a></li>
                         <li><a href="#"></a></li>
@@ -67,7 +66,7 @@
             </div>
         </div>
 
-        <div class="layer layer1 aboutLayer none">
+        <div class="layer layer1 aboutLayer op0">
             <div class="layer__contents">
                 <div class="head">
                     <div class="face"></div>
@@ -81,87 +80,66 @@
                     </div>
                 </div>
                 <p class="intro1">
-                    안녕하세요! 창의적인 웹 디자인과 최신 프론트엔드 기술에
-                    열정을 가진 취업 준비생입니다.<br />
-                    HTML, CSS, JavaScript를 포함한 다양한 웹 기술에
-                    능숙하며,사용자 경험을 최우선으로 생각하는 웹사이트와
-                    애플리케이션 개발에 경험이 있습니다. 새로운 기술을 배우고
-                    도전하는 것을 좋아하며, 팀과 협력하여 혁신적이고 효과적인
-                    솔루션을 만드는 데 기여하고 싶습니다.
+                    안녕하세요! 창의적인 웹 디자인과 최신 프론트엔드 기술에 열정을 가진 취업 준비생입니다.<br />
+                    HTML, CSS, JavaScript를 포함한 다양한 웹 기술에 능숙하며,사용자 경험을 최우선으로 생각하는
+                    웹사이트와 애플리케이션 개발에 경험이 있습니다. 새로운 기술을 배우고 도전하는 것을 좋아하며, 팀과
+                    협력하여 혁신적이고 효과적인 솔루션을 만드는 데 기여하고 싶습니다.
                 </p>
                 <p class="intro2">
-                    대학에서 컴퓨터 과학을 전공하며 프론트엔드 개발에 대한 깊은
-                    이해를 쌓았고, 다양한 프로젝트와 인턴십을 통해 실제 작업
-                    환경에서의 경험을 얻었습니다. 반응형 웹 디자인과 크로스
-                    브라우저 호환성에 대한 지식을 바탕으로 접근성과 사용성을
-                    강조하는 웹사이트를 구축하는 데 특화되어 있습니다. 항상 최신
-                    웹 기술 트렌드를 따르며, 새로운 프레임워크와 라이브러리를
-                    배우는 것에 능동적으로 참여하여 기술 스택을 지속적으로
-                    확장하고 있습니다
+                    대학에서 컴퓨터 과학을 전공하며 프론트엔드 개발에 대한 깊은 이해를 쌓았고, 다양한 프로젝트와
+                    인턴십을 통해 실제 작업 환경에서의 경험을 얻었습니다. 반응형 웹 디자인과 크로스 브라우저 호환성에
+                    대한 지식을 바탕으로 접근성과 사용성을 강조하는 웹사이트를 구축하는 데 특화되어 있습니다. 항상 최신
+                    웹 기술 트렌드를 따르며, 새로운 프레임워크와 라이브러리를 배우는 것에 능동적으로 참여하여 기술
+                    스택을 지속적으로 확장하고 있습니다
                 </p>
                 <div class="list">
                     <dl>
                         <dt>basic</dt>
                         <dd>
-                            <em>HTML</em>: 웹 페이지의 구조와 콘텐츠를
-                            효과적으로 구현할 수 있는 능력을 보유하고 있습니다.
-                            다양한 HTML5 태그와 속성을 활용하여 의미론적이고
-                            접근성이 높은 웹사이트를 개발하는 데 익숙합니다
+                            <em>HTML</em>: 웹 페이지의 구조와 콘텐츠를 효과적으로 구현할 수 있는 능력을 보유하고
+                            있습니다. 다양한 HTML5 태그와 속성을 활용하여 의미론적이고 접근성이 높은 웹사이트를 개발하는
+                            데 익숙합니다
                         </dd>
                         <dd>
-                            <em>CSS</em>: 웹 페이지의 시각적 디자인과 레이아웃을
-                            세련되게 조정할 수 있습니다. Flexbox와 Grid 시스템을
-                            이용한 반응형 웹 디자인을 구현한 경험이 있으며, CSS
-                            애니메이션과 전환을 활용하여 사용자 경험을
-                            향상시키는 데 능숙합니다.
+                            <em>CSS</em>: 웹 페이지의 시각적 디자인과 레이아웃을 세련되게 조정할 수 있습니다. Flexbox와
+                            Grid 시스템을 이용한 반응형 웹 디자인을 구현한 경험이 있으며, CSS 애니메이션과 전환을
+                            활용하여 사용자 경험을 향상시키는 데 능숙합니다.
                         </dd>
                         <dd>
-                            <em>JavaScript</em>: 동적 웹 페이지 및 어플리케이션
-                            개발에 있어 깊은 이해도를 보유하고 있습니다. 비동기
-                            프로그래밍, ES6+ 문법, DOM 조작 등을 포함한 고급
-                            개념에 능숙합니다. 대규모 프로젝트에서의 성능
-                            최적화와 디버깅에 경험이 풍부합니다.
+                            <em>JavaScript</em>: 동적 웹 페이지 및 어플리케이션 개발에 있어 깊은 이해도를 보유하고
+                            있습니다. 비동기 프로그래밍, ES6+ 문법, DOM 조작 등을 포함한 고급 개념에 능숙합니다. 대규모
+                            프로젝트에서의 성능 최적화와 디버깅에 경험이 풍부합니다.
                         </dd>
                         <dd>
-                            <em>SCSS</em>: CSS 전처리기인 SCSS를 사용하여 보다
-                            효율적이고 유지보수가 용이한 스타일시트를
-                            작성합니다. 중첩 규칙, 믹스인, 함수를 활용한 동적
-                            스타일링에 능숙합니다.
+                            <em>SCSS</em>: CSS 전처리기인 SCSS를 사용하여 보다 효율적이고 유지보수가 용이한 스타일시트를
+                            작성합니다. 중첩 규칙, 믹스인, 함수를 활용한 동적 스타일링에 능숙합니다.
                         </dd>
                     </dl>
 
                     <dl>
                         <dt>framework</dt>
                         <dd>
-                            <em>React</em>: 컴포넌트 기반 아키텍처를 이해하고
-                            있으며, 대규모 어플리케이션 개발에 React를 활용한
-                            경험이 풍부합니다. React Hooks, 상태 관리
-                            라이브러리(예: Redux) 및 최적화 기술에 능숙합니다.
-                        </dd>
-                        <dd>
-                            <em>Vue.js </em>: 선언적 렌더링과 컴포넌트 시스템을
-                            이용한 인터랙티브한 UI 개발에 경험이 있습니다.
-                            Vuex를 활용한 상태 관리와 Vue Router를 사용한
-                            라우팅에 익숙합니다.
-                        </dd>
-                        <dd>
-                            <em>Next.js </em>: 서버 사이드 렌더링(SSR)과 정적
-                            사이트 생성(SSG)에 대한 이해를 바 탕으로 Next.js
-                            프레임워크를 활용한 웹 어플리케이션 개발에 경험이
-                            있습니다. SEO 최적화 및 퍼포먼스 향상을 위한 기술적
-                            전략 구현에 능숙합니다
-                        </dd>
-                        <dd>
-                            <em>MySQL </em>: 데이터베이스 설계 및 관리에 있어
-                            실질적인 경험을 가지고 있습니다. SQL 쿼리 작성,
-                            데이터베이스 최적화, 복잡한 조인 및 트랜잭션 처리에
+                            <em>React</em>: 컴포넌트 기반 아키텍처를 이해하고 있으며, 대규모 어플리케이션 개발에 React를
+                            활용한 경험이 풍부합니다. React Hooks, 상태 관리 라이브러리(예: Redux) 및 최적화 기술에
                             능숙합니다.
                         </dd>
                         <dd>
-                            <em>PHP </em>: 서버 사이드 스크립트 작성에 능숙하며,
-                            PHP를 사용한 데이터 관리와 동적 웹 페이지 생성에
-                            경험이 있습니다. 객체지향 PHP 개발에 익숙하며, MVC
-                            아키텍처를 이해하고 적용한 경험이 있습니다.
+                            <em>Vue.js </em>: 선언적 렌더링과 컴포넌트 시스템을 이용한 인터랙티브한 UI 개발에 경험이
+                            있습니다. Vuex를 활용한 상태 관리와 Vue Router를 사용한 라우팅에 익숙합니다.
+                        </dd>
+                        <dd>
+                            <em>Next.js </em>: 서버 사이드 렌더링(SSR)과 정적 사이트 생성(SSG)에 대한 이해를 바 탕으로
+                            Next.js 프레임워크를 활용한 웹 어플리케이션 개발에 경험이 있습니다. SEO 최적화 및 퍼포먼스
+                            향상을 위한 기술적 전략 구현에 능숙합니다
+                        </dd>
+                        <dd>
+                            <em>MySQL </em>: 데이터베이스 설계 및 관리에 있어 실질적인 경험을 가지고 있습니다. SQL 쿼리
+                            작성, 데이터베이스 최적화, 복잡한 조인 및 트랜잭션 처리에 능숙합니다.
+                        </dd>
+                        <dd>
+                            <em>PHP </em>: 서버 사이드 스크립트 작성에 능숙하며, PHP를 사용한 데이터 관리와 동적 웹
+                            페이지 생성에 경험이 있습니다. 객체지향 PHP 개발에 익숙하며, MVC 아키텍처를 이해하고 적용한
+                            경험이 있습니다.
                         </dd>
                     </dl>
                 </div>
@@ -175,12 +153,7 @@
         <div class="layer layer2 youtube none">
             <div class="layer__contents">
                 <h3>코딩 유튜버</h3>
-                <span class="small"
-                    >Youtube API
-                    <em
-                        >API를 이용하여 코딩 관련된 최신 영상을 보여줍니다.</em
-                    ></span
-                >
+                <span class="small">Youtube API <em>API를 이용하여 코딩 관련된 최신 영상을 보여줍니다.</em></span>
                 <span class="mail"></span>
                 <div class="info">
                     <div>
@@ -199,109 +172,78 @@
                 <div class="view">
                     <div>
                         <div class="img"></div>
-                        <div class="title">
-                            100+ JavaScript Concepts you Need to Know
-                        </div>
+                        <div class="title">100+ JavaScript Concepts you Need to Know</div>
+                    </div>
+                    <div>
+                        <div class="img"></div>
+                        <div class="title">Intro to Software Architecture | Overview, Examples, and Diagrams</div>
                     </div>
                     <div>
                         <div class="img"></div>
                         <div class="title">
-                            Intro to Software Architecture | Overview, Examples,
-                            and Diagrams
+                            Build Responsive Portfolio Website Using React JS | Next JS 14 | Tailwind CSS | Framer
+                            Motion
                         </div>
                     </div>
                     <div>
                         <div class="img"></div>
-                        <div class="title">
-                            Build Responsive Portfolio Website Using React JS |
-                            Next JS 14 | Tailwind CSS | Framer Motion
-                        </div>
+                        <div class="title">100+ JavaScript Concepts you Need to Know</div>
+                    </div>
+                    <div>
+                        <div class="img"></div>
+                        <div class="title">100+ JavaScript Concepts you Need to Know</div>
+                    </div>
+                    <div>
+                        <div class="img"></div>
+                        <div class="title">100+ JavaScript Concepts you Need to Know</div>
+                    </div>
+                    <div>
+                        <div class="img"></div>
+                        <div class="title">100+ JavaScript Concepts you Need to Know</div>
+                    </div>
+                    <div>
+                        <div class="img"></div>
+                        <div class="title">100+ JavaScript Concepts you Need to Know</div>
+                    </div>
+                    <div>
+                        <div class="img"></div>
+                        <div class="title">100+ JavaScript Concepts you Need to Know</div>
+                    </div>
+                    <div>
+                        <div class="img"></div>
+                        <div class="title">Intro to Software Architecture | Overview, Examples, and Diagrams</div>
                     </div>
                     <div>
                         <div class="img"></div>
                         <div class="title">
-                            100+ JavaScript Concepts you Need to Know
+                            Build Responsive Portfolio Website Using React JS | Next JS 14 | Tailwind CSS | Framer
+                            Motion
                         </div>
                     </div>
                     <div>
                         <div class="img"></div>
-                        <div class="title">
-                            100+ JavaScript Concepts you Need to Know
-                        </div>
+                        <div class="title">100+ JavaScript Concepts you Need to Know</div>
                     </div>
                     <div>
                         <div class="img"></div>
-                        <div class="title">
-                            100+ JavaScript Concepts you Need to Know
-                        </div>
+                        <div class="title">100+ JavaScript Concepts you Need to Know</div>
                     </div>
                     <div>
                         <div class="img"></div>
-                        <div class="title">
-                            100+ JavaScript Concepts you Need to Know
-                        </div>
+                        <div class="title">100+ JavaScript Concepts you Need to Know</div>
                     </div>
                     <div>
                         <div class="img"></div>
-                        <div class="title">
-                            100+ JavaScript Concepts you Need to Know
-                        </div>
+                        <div class="title">100+ JavaScript Concepts you Need to Know</div>
                     </div>
                     <div>
                         <div class="img"></div>
-                        <div class="title">
-                            100+ JavaScript Concepts you Need to Know
-                        </div>
-                    </div>
-                    <div>
-                        <div class="img"></div>
-                        <div class="title">
-                            Intro to Software Architecture | Overview, Examples,
-                            and Diagrams
-                        </div>
-                    </div>
-                    <div>
-                        <div class="img"></div>
-                        <div class="title">
-                            Build Responsive Portfolio Website Using React JS |
-                            Next JS 14 | Tailwind CSS | Framer Motion
-                        </div>
-                    </div>
-                    <div>
-                        <div class="img"></div>
-                        <div class="title">
-                            100+ JavaScript Concepts you Need to Know
-                        </div>
-                    </div>
-                    <div>
-                        <div class="img"></div>
-                        <div class="title">
-                            100+ JavaScript Concepts you Need to Know
-                        </div>
-                    </div>
-                    <div>
-                        <div class="img"></div>
-                        <div class="title">
-                            100+ JavaScript Concepts you Need to Know
-                        </div>
-                    </div>
-                    <div>
-                        <div class="img"></div>
-                        <div class="title">
-                            100+ JavaScript Concepts you Need to Know
-                        </div>
-                    </div>
-                    <div>
-                        <div class="img"></div>
-                        <div class="title">
-                            100+ JavaScript Concepts you Need to Know
-                        </div>
+                        <div class="title">100+ JavaScript Concepts you Need to Know</div>
                     </div>
                 </div>
             </div>
             <div class="layer__footer">
-                😏 유튜브를 통해 코딩 영상을 보면 유혹들이 많습니다. 여기서 보면
-                최신 코딩만 광고 없이 볼 수 있습니다.
+                😏 유튜브를 통해 코딩 영상을 보면 유혹들이 많습니다. 여기서 보면 최신 코딩만 광고 없이 볼 수 있습니다.
             </div>
         </div>
 
@@ -329,15 +271,12 @@
                     <img src="assets/img/bg01.png" alt="bg" />
                 </div>
                 <p>
-                    프로토타입을 작성해본 적이 없었던 와중에 Figma라는 툴이
-                    새롭게 나오게 되었고 이걸 프로젝트에 적용하여 프로토타입을
-                    작성해보면 좋을 것 같다고 말씀하셔서 적용하게 되었습니다.
-                    사실상 기술적인 면과 크게 관련되어 있진 않지만 프로토타입을
-                    작성하면서 배웠던 점은 개발을 하기전에 뭘 개발해야 할지
-                    명확하게 파악할 수 있었다는 점 입니다. 본래, 개발을 할 때는
-                    의식의 흐름으로 개발을 하고는 했는데 프로토타입을 통해서
-                    체계적인 구조를 세우는 방법과 실제로 시연해봄으로써 발생할
-                    수 있는 버그/예외 케이스 등에 대해 예측 할 수 있었습니다.
+                    프로토타입을 작성해본 적이 없었던 와중에 Figma라는 툴이 새롭게 나오게 되었고 이걸 프로젝트에
+                    적용하여 프로토타입을 작성해보면 좋을 것 같다고 말씀하셔서 적용하게 되었습니다. 사실상 기술적인 면과
+                    크게 관련되어 있진 않지만 프로토타입을 작성하면서 배웠던 점은 개발을 하기전에 뭘 개발해야 할지
+                    명확하게 파악할 수 있었다는 점 입니다. 본래, 개발을 할 때는 의식의 흐름으로 개발을 하고는 했는데
+                    프로토타입을 통해서 체계적인 구조를 세우는 방법과 실제로 시연해봄으로써 발생할 수 있는 버그/예외
+                    케이스 등에 대해 예측 할 수 있었습니다.
                 </p>
                 <h4>Figma</h4>
                 <div class="img">
@@ -347,27 +286,20 @@
                     />
                 </div>
                 <p>
-                    프로토타입을 작성해본 적이 없었던 와중에 Figma라는 툴이
-                    새롭게 나오게 되었고 이걸 프로젝트에 적용하여 프로토타입을
-                    작성해보면 좋을 것 같다고 말씀하셔서 적용하게 되었습니다.
-                    사실상 기술적인 면과 크게 관련되어 있진 않지만 프로토타입을
-                    작성하면서 배웠던 점은 개발을 하기전에 뭘 개발해야 할지
-                    명확하게 파악할 수 있었다는 점 입니다. 본래, 개발을 할 때는
-                    의식의 흐름으로 개발을 하고는 했는데 프로토타입을 통해서
-                    체계적인 구조를 세우는 방법과 실제로 시연해봄으로써 발생할
-                    수 있는 버그/예외 케이스 등에 대해 예측 할 수 있었습니다.
+                    프로토타입을 작성해본 적이 없었던 와중에 Figma라는 툴이 새롭게 나오게 되었고 이걸 프로젝트에
+                    적용하여 프로토타입을 작성해보면 좋을 것 같다고 말씀하셔서 적용하게 되었습니다. 사실상 기술적인 면과
+                    크게 관련되어 있진 않지만 프로토타입을 작성하면서 배웠던 점은 개발을 하기전에 뭘 개발해야 할지
+                    명확하게 파악할 수 있었다는 점 입니다. 본래, 개발을 할 때는 의식의 흐름으로 개발을 하고는 했는데
+                    프로토타입을 통해서 체계적인 구조를 세우는 방법과 실제로 시연해봄으로써 발생할 수 있는 버그/예외
+                    케이스 등에 대해 예측 할 수 있었습니다.
                 </p>
                 <p>
-                    어플을 만들 때 기존 방식을 사용하면 Java/Swift를 사용해서
-                    안드로이드/iOS를 각각 개발하는 것이 일반적인데, 프로젝트를
-                    진행하던 시기에 마침 크로스 플랫폼 프레임워크인 Flutter가
-                    베타버전으로 나왔습니다. 바로 적용해보고자 했지만
-                    프레임워크가 Dart라는 언어를 사용했기 때문에 해당 언어도
-                    배우게 되었습니다. 결국, 새로운 언어와 새로운 프레임워크를
-                    배워야했고 정말 낯설었지만 이런 환경을 통해 공식문서로
-                    학습하는 방법과 깃헙 이슈를 이용해 커뮤니케이션 하는 방법 을
-                    배울 수 있었습니다. 아래 사진은 제가 Flutter 저장소에
-                    문의했던 이슈들입니다.
+                    어플을 만들 때 기존 방식을 사용하면 Java/Swift를 사용해서 안드로이드/iOS를 각각 개발하는 것이
+                    일반적인데, 프로젝트를 진행하던 시기에 마침 크로스 플랫폼 프레임워크인 Flutter가 베타버전으로
+                    나왔습니다. 바로 적용해보고자 했지만 프레임워크가 Dart라는 언어를 사용했기 때문에 해당 언어도 배우게
+                    되었습니다. 결국, 새로운 언어와 새로운 프레임워크를 배워야했고 정말 낯설었지만 이런 환경을 통해
+                    공식문서로 학습하는 방법과 깃헙 이슈를 이용해 커뮤니케이션 하는 방법 을 배울 수 있었습니다. 아래
+                    사진은 제가 Flutter 저장소에 문의했던 이슈들입니다.
                 </p>
             </div>
             <div class="layer__footer">
@@ -402,6 +334,11 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
         <script src="https://unpkg.com/split-type"></script>
         <script>
+            document.querySelector(".first").addEventListener("click", () => {
+                document.querySelector(".layer1").classList.remove("none");
+                document.querySelector(".layer1").classList.add("show");
+            });
+
             // setTimeout(() => {
             //     let tl = gsap.timeline();
             //     tl.to("#loading", { opacity: 0, duration: 1, delay: 0.5 });
@@ -429,12 +366,8 @@
                 });
             };
 
-            document
-                .querySelector(".introIcon")
-                .addEventListener("click", layerOpen);
-            document
-                .querySelector(".layer__footer .close")
-                .addEventListener("click", layerClose);
+            document.querySelector(".introIcon").addEventListener("click", layerOpen);
+            document.querySelector(".layer__footer .close").addEventListener("click", layerClose);
         </script>
         <script>
             const draggable = document.getElementById("draggable");
