--- a/김현민/index.html
+++ b/김현민/index.html
@@ -67,33 +67,60 @@
             <!-- //section2 -->
 
             <section id="section3">
-                <div class="title">
-                    <h3>javascript</h3>
-                    <p>
-                        자바스크립를 활용한 동적 웹 애플리케이션 개발 경험이 풍부합니다.<br />복잡한 문제를 해결하고
-                        최적화된 코드를 작성하여 사용자 친화적인 인터페이스를 구현하는 능력을 갖추고 있습니다.
-                    </p>
-                </div>
-                <div class="title">
-                    <h3>react.js</h3>
-                    <p>
-                        자바스크립를 활용한 동적 웹 애플리케이션 개발 경험이 풍부합니다.<br />복잡한 문제를 해결하고
-                        최적화된 인터페이스를 구현하는 능력을 갖추고 있습니다.
-                    </p>
-                </div>
-                <div class="title">
-                    <h3>node.js</h3>
-                    <p>
-                        자바스크립를 활용한 동적 웹 애플리케이션 개발 경험이 풍부합니다.<br />복잡한 문제를 해결하고
-                        최적화된 코드를 작성하여 능력을 갖추고 있습니다.
-                    </p>
-                </div>
-                <div class="title">
-                    <h3>PHP</h3>
-                    <p>
-                        자바스크립를 활용한 동적 웹 애플리케이션 개발 경험이 풍부합니다.<br />복잡한 문제를 해결하고
-                        최적화된 코드를 작성하여 사용자 친화적인 인터페이스를 구현하는 능력을 갖추고 있습니다.
-                    </p>
+                <div class="showTitle">
+                    <div class="title t1">
+                        <h3>HTMLCSS</h3>
+                        <p>
+                            자바스크립를 활용한 동적 웹 애플리케이션 개발 경험이 풍부합니다.<br />복잡한 문제를 해결하고
+                            최적화된 코드를 작성하여 사용자 친화적인 인터페이스를<br />
+                            구현하는 능력을 갖추고 있습니다.
+                        </p>
+                    </div>
+                    <div class="title t2">
+                        <h3>javascript</h3>
+                        <p>
+                            자바스크립를 활용한 동적 웹 애플리케이션 개발 경험이 풍부합니다.<br />복잡한 문제를 해결하고
+                            최적화된 코드를 작성하여 사용자 친화적인 인터페이스를 구현하는 능력을 갖추고 있습니다.
+                        </p>
+                    </div>
+                    <div class="title t3">
+                        <h3>python</h3>
+                        <p>
+                            Python을 사용하여 기본적인 데이터 크롤링을 수행한 경험이 있습니다.<br />웹사이트 구조를
+                            이해하고, 필요한 데이터를 수집할 수 있는<br />
+                            기초적인 크롤링 스크립트를 작성할 수 있습니다.
+                        </p>
+                    </div>
+                    <div class="title t4">
+                        <h3>react.js</h3>
+                        <p>
+                            자바스크립를 활용한 동적 웹 애플리케이션 개발 경험이 풍부합니다.<br />복잡한 문제를 해결하고
+                            최적화된 인터페이스를 구현하는 능력을 갖추고 있습니다.
+                        </p>
+                    </div>
+                    <div class="title t5">
+                        <h3>next.js</h3>
+                        <p>
+                            Next.js를 활용하여 간단한 동적 웹 애플리케이션을 개발한 경험이 있습니다.<br />효율적인
+                            페이지 라우팅과 기본적인 서버 사이드 렌더링을<br />
+                            구현할 수 있습니다.
+                        </p>
+                    </div>
+                    <div class="title t6">
+                        <h3>node.js</h3>
+                        <p>
+                            Node.js를 사용하여 서버 사이드 애플리케이션을 개발한 경험이 있습니다.<br />기본적인 서버
+                            구축 및 데이터베이스 통신을 구현할 수<br />
+                            있는 능력을 갖추고 있습니다.
+                        </p>
+                    </div>
+                    <div class="title t7">
+                        <h3>PHP</h3>
+                        <p>
+                            자바스크립를 활용한 동적 웹 애플리케이션 개발 경험이 풍부합니다.<br />복잡한 문제를 해결하고
+                            최적화된 코드를 작성하여 사용자 친화적인 인터페이스를 구현하는 능력을 갖추고 있습니다.
+                        </p>
+                    </div>
                 </div>
             </section>
             <!-- //section3 -->
@@ -154,14 +181,6 @@
 
             requestAnimationFrame(raf);
         </script>
-        <!-- <script type="module">
-        import locomotiveScroll from "https://cdn.skypack.dev/locomotive-scroll@4.0.6";
-
-        const lscroll = new locomotiveScroll({
-            el: document.querySelector("[data-scroll-container]"),
-            smooth: true,
-        });
-    </script> -->
 
         <script>
             const targets = gsap.utils.toArray(".split");
@@ -224,6 +243,32 @@
                 start: "top center",
                 end: "bottom top",
                 markers: false,
+            });
+
+            gsap.set(".showTitle .t1", { opacity: 0 });
+            gsap.set(".showTitle .t2", { opacity: 0 });
+            gsap.set(".showTitle .t3", { opacity: 0 });
+            gsap.set(".showTitle .t4", { opacity: 0 });
+            gsap.set(".showTitle .t5", { opacity: 0 });
+            gsap.set(".showTitle .t6", { opacity: 0 });
+            gsap.set(".showTitle .t7", { opacity: 0 });
+
+            const ani4 = gsap.timeline();
+            ani4.to(".showTitle .t1", { opacity: 1, y: 100 });
+            ani4.to(".showTitle .t2", { opacity: 1, y: 100 });
+            ani4.to(".showTitle .t3", { opacity: 1, y: 100 });
+            ani4.to(".showTitle .t4", { opacity: 1, y: 100 });
+            ani4.to(".showTitle .t5", { opacity: 1, y: 100 });
+            ani4.to(".showTitle .t6", { opacity: 1, y: 100 });
+            ani4.to(".showTitle .t7", { opacity: 1, y: 100 });
+
+            ScrollTrigger.create({
+                animation: ani4,
+                trigger: "#section3",
+                start: "top top",
+                end: "+=5000",
+                pin: true,
+                markers: true,
             });
         </script>
 
